create spring profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=pioHealth
-my.custom.property= hello world
+#spring.profiles.active=dev
+my.custom.property= hello world in production
+my.second.prop=bye in production
